refactor(monitor): 重构React组件使用JSX语法替代createElement调用

--- a/src/monitor/templates/dashboard.html
+++ b/src/monitor/templates/dashboard.html
@@ -13,6 +13,6 @@
 <body>
     <div id="root"></div>
 
-    <script src="/static/app.js"></script>
+    <script type="text/babel" src="/static/app.js"></script>
 </body>
 </html>
