--- a/src/monitor/templates/dashboard.html
+++ b/src/monitor/templates/dashboard.html
@@ -8,9 +8,8 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <link rel="stylesheet" href="/static/style.css">
 </head>
-<body>
+<body class="bg-slate-900 text-gray-200 font-sans leading-relaxed m-0 p-0 box-border">
     <div id="root"></div>
 
     <script type="text/babel" src="/static/app.js"></script>
